# console_style

./: .travis.yml  CMakeLists.txt  ConsoleSyle.cpp  ConsoleSyle.h  README.md  console_style_example.cpp  example.cpp
include/console_style/: ConsoleSyle.h
src/: ConsoleSyle.cpp
